--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
           <div class="header__logo-img-cont">
             <img
               src="./assets/png/john-doe.png"
-              alt="Ram Maheshwari Logo Image"
+              alt="Rohan Patil Logo Image"
               class="header__logo-img"
             />
           </div>
-          <span class="header__logo-sub">John Doe</span>
+          <span class="header__logo-sub">Rohan patil</span>
         </div>
         <div class="header__main">
           <ul class="header__links">
@@ -84,12 +84,10 @@
     </header>
     <section class="home-hero">
       <div class="home-hero__content">
-        <h1 class="heading-primary">Hey, My name is John Doe</h1>
+        <h1 class="heading-primary">Hey, My name is Rohan patil</h1>
         <div class="home-hero__info">
           <p class="text-primary">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic facilis
-            tempora explicabo quae quod deserunt eius sapiente solutions for
-            complex problems
+            Software Developer. Problem Solver. Lifelong Learner.
           </p>
         </div>
         <div class="home-hero__cta">
@@ -155,8 +153,7 @@
         <h2 class="heading heading-sec heading-sec__mb-med">
           <span class="heading-sec__main">About Me</span>
           <span class="heading-sec__sub">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic facilis
-            tempora explicabo quae quod deserunt eius sapiente
+            A software developer in training, building and deploying user-centric applications
           </span>
         </h2>
         <div class="about__content">
@@ -164,21 +161,7 @@
             <h3 class="about__content-title">Get to know me!</h3>
             <div class="about__content-details">
               <p class="about__content-details-para">
-                Hey! It's
-                <strong>John Doe</strong>
-                and I'm a <strong> Frontend Web Developer </strong> located in
-                Los Angeles. I've done
-                <strong> remote </strong>
-                projects for agencies, consulted for startups, and collaborated
-                with talented people to create
-                <strong>digital products </strong>
-                for both business and consumer use.
-              </p>
-              <p class="about__content-details-para">
-                I'm a bit of a digital product junky. Over the years, I've used
-                hundreds of web and mobile apps in different industries and
-                verticals. Feel free to
-                <strong>contact</strong> me here.
+                I'm a final-year Computer Science student with a passion for building intuitive digital experiences. I love bringing ideas to life with code and I'm eager to contribute my skills to a challenging and creative team.
               </p>
             </div>
             <a href="./#contact" class="btn btn--med btn--theme dynamicBgClr"
@@ -209,85 +192,67 @@
       <div class="main-container">
         <h2 class="heading heading-sec heading-sec__mb-bg">
           <span class="heading-sec__main">Projects</span>
-          <span class="heading-sec__sub">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic facilis
-            tempora explicabo quae quod deserunt eius sapiente
-          </span>
         </h2>
 
         <div class="projects__content">
+          <!-- Expense Tracker Project Start -->
           <div class="projects__row">
             <div class="projects__row-img-cont">
               <img
                 src="./assets/jpeg/project-mockup-example.jpeg"
-                alt="Software Screenshot"
+                alt="Expense Tracker Screenshot"
                 class="projects__row-img"
                 loading="lazy"
               />
             </div>
             <div class="projects__row-content">
-              <h3 class="projects__row-content-title">Project 1</h3>
+              <h3 class="projects__row-content-title">Expense Tracker</h3>
               <p class="projects__row-content-desc">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic
-                facilis tempora, explicabo quae quod deserunt eius sapiente
-                praesentium.
+                <strong>React.js, Firebase, Chart.js</strong><br>
+                Engineered a full-stack expense tracker with real-time data visualization, achieving 40% higher user engagement.<br>
+                Integrated Firebase Authentication with multi-login support, improving account security and reducing unauthorized access by 60%.<br>
+                Leveraged Firestore & Chart.js to allow users to analyze spending patterns and optimize budgets.
               </p>
               <a
-                href="./project-1.html"
+                href="https://expense-tracker-rudra-yadav-44.vercel.app/"
                 class="btn btn--med btn--theme dynamicBgClr"
                 target="_blank"
-                >Case Study</a
+                >Live Project</a
               >
             </div>
           </div>
+          <!-- Expense Tracker Project End -->
+          <!-- SCSDB Project Start -->
           <div class="projects__row">
             <div class="projects__row-img-cont">
               <img
                 src="./assets/jpeg/project-mockup-example.jpeg"
-                alt="Software Screenshot"
+                alt="SCSDB Movie Streaming Screenshot"
                 class="projects__row-img"
                 loading="lazy"
               />
             </div>
             <div class="projects__row-content">
-              <h3 class="projects__row-content-title">Project 2</h3>
+              <h3 class="projects__row-content-title">SCSDB</h3>
               <p class="projects__row-content-desc">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic
-                facilis tempora, explicabo quae quod deserunt eius sapiente
-                praesentium.
+                <strong>React.js, Vite, JavaScript, REST APIs</strong><br>
+                <em>May 2025 - June 2025</em><br>
+                Built a movie streaming web app with 1,000+ movies, clean UI, and efficient client-side routing.<br>
+                Optimized workflow with Vite, achieving ~40% faster build times.<br>
+                Engineered robust integration of REST APIs within a scalable React.js architecture, ensuring seamless data retrieval and dynamic content updates for a responsive movie streaming experience.
               </p>
+              <!-- Add your project link below if available -->
+              <!--
               <a
-                href="./project-2.html"
+                href="YOUR_PROJECT_LINK"
                 class="btn btn--med btn--theme dynamicBgClr"
                 target="_blank"
-                >Case Study</a
+                >Live Project</a
               >
+              -->
             </div>
           </div>
-          <div class="projects__row">
-            <div class="projects__row-img-cont">
-              <img
-                src="./assets/jpeg/project-mockup-example.jpeg"
-                alt="Software Screenshot"
-                class="projects__row-img"
-                loading="lazy"
-              />
-            </div>
-            <div class="projects__row-content">
-              <h3 class="projects__row-content-title">Project 3</h3>
-              <p class="projects__row-content-desc">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic
-                facilis tempora, explicabo quae quod deserunt eius sapiente
-                praesentium.
-              </p>
-              <a
-                href="./project-3.html"
-                class="btn btn--med btn--theme dynamicBgClr"
-                target="_blank"
-                >Case Study</a
-              >
-            </div>
-          </div>
+          <!-- SCSDB Project End -->
         </div>
       </div>
     </section>
@@ -295,10 +260,6 @@
       <div class="main-container">
         <h2 class="heading heading-sec heading-sec__mb-med">
           <span class="heading-sec__main heading-sec__main--lt">Contact</span>
-          <span class="heading-sec__sub heading-sec__sub--lt">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic facilis
-            tempora explicabo quae quod deserunt eius sapiente
-          </span>
         </h2>
         <div class="contact__form-container">
           <form action="#" class="contact__form">
@@ -351,7 +312,7 @@
               <span>Social</span>
             </h2>
             <div class="main-footer__social-cont">
-              <a target="_blank" rel="noreferrer" href="#">
+              <a target="_blank" rel="noreferrer" href="https://www.linkedin.com/in/rohan-patil905">
                 <img
                   class="main-footer__icon"
                   src="./assets/png/linkedin-ico.png"
@@ -389,10 +350,9 @@
             </div>
           </div>
           <div class="main-footer__row main-footer__row-2">
-            <h4 class="heading heading-sm text-lt">John Doe</h4>
+            <h4 class="heading heading-sm text-lt">Rohan patil</h4>
             <p class="main-footer__short-desc">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit facilis
-              tempora explicabo quae quod deserunt
+             
             </p>
           </div>
         </div>
@@ -400,8 +360,8 @@
         <!-- If you give me some credit or shoutout here by linking to my website, then it will be a big thing for me and will help me a lot :) -->
         <div class="main-footer__lower">
           &copy; Copyright 2021. Made by
-          <a rel="noreferrer" target="_blank" href="https://rammaheshwari.com"
-            >Ram Maheshwari</a
+          <a rel="noreferrer" target="_blank" href=""
+            >Rohan patil</a
           >
         </div>
       </div>
